test/files/pos/t5809.scala
package object foo {
  implicit class PimpedInt(foo: Int) {
    def bar = ???
    def bippy = foo
  }
}
